# esp32-mcp-server

./: Cargo.toml  README.md
desktop-qr-code-mcp/: README.md  WARP_SETUP.md
desktop-qr-code-mcp/src/: main.rs
esp32-c6-mcp-rs/: Cargo.toml
esp32-c6-mcp-rs/src/: lib.rs  mcp.rs
esp32-mcp-bridge/: Cargo.toml
esp32-mcp-bridge/src/: main.rs
esp32-s3-mcp-idf/: CMakeLists.txt  README.md
esp32-s3-mcp-idf/main/: CMakeLists.txt  Kconfig.projbuild  esp32-s3-mcp-idf.c  led_control.c  mcp_server.c  mcp_server.h
